Removed unnecessary files. Added logging to FlightsDAO and BookingsDAO. Removed unnecessary methods. (read -> getById) Rewrite saveAll methods. Fixed authenticate method (was working with map instead of DAO) Changed some methods names. Temporarily removed all tests.